sand-box-app/overlays/dev/platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-configmap: "sandbox-platform-secret-configmap"
        configmap.reloader.stakater.com/reload: "sandbox-platform-secret-configmap"
        vault.hashicorp.com/agent-requests-cpu: "25m"
        vault.hashicorp.com/agent-limits-cpu: "50m"
    spec:
      containers:
        - name: vc-platform-web
          command:
              - "/bin/bash"
              - "-c"
          args:
              - "dotnet VirtoCommerce.Platform.Web.dll"     
          readinessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - mountPath: "/opt/virtocommerce/platform/wwwroot/cms-content"
              name: cms-content-data
            - mountPath: "/opt/virtocommerce/platform/modules"
              name: modules-data
      volumes:
      - name: cms-content-data
        persistentVolumeClaim:
          claimName: cms-content-blob-volume
      - name: modules-data
        emptyDir: {}
      nodeSelector:
        environment: trial
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
