sand-box-app/overlays/dev/storefront-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
spec:
  replicas: 1
  template:
    spec:
      spec:
        containers:
        - name: vc-storefront-web
          readinessProbe:
            httpGet:
              path: /
              port: 80
