sand-box-app/overlays/dev/platform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 443
      targetPort: http
      protocol: TCP
  selector:
    app: platform
