sand-box-app/overlays/dev/welcome-page.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: welcome-page
  replicas: 1
  template:
    metadata:
      labels:
        app: welcome-page
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-page
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: welcome-page
