sand-box-app/overlays/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 100M
    nginx.org/proxy-buffers: "8 32k"
    nginx.org/proxy-buffer-size: "64k"
    # nginx.org/location-snippets: |
    #   error_page 502 500 503 504 = @sorry1;
    nginx.org/server-snippets: |
      proxy_intercept_errors on;
      error_page 500 501 502 503 504 = @sorry1;
      error_page 404 = @sorry2;
      location @sorry1 {
        proxy_pass http://sandbox-error-page.dev.svc.cluster.local:80; 
      }  
      location @sorry2 {
        proxy_pass http://sandbox-error-page.dev.svc.cluster.local:80; 
      }
spec:    
  rules:
  - host: demo4.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /    
#  $(VC_STOREFRONT_SERVICE).$(VC_NAMESPACE).govirto.com
